--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
       </plugin>      
     </plugins>
   </build>
-  <dependencies>
+  <dependencies>  	  	
   	<dependency>
   		<groupId>commons-collections</groupId>
   		<artifactId>commons-collections</artifactId>
@@ -89,8 +89,29 @@
   	</dependency>
   	<dependency>
   		<groupId>org.openengsb.framework</groupId>
+  		<artifactId>org.openengsb.framework.util</artifactId>
+  		<version>3.0.0-SNAPSHOT</version>
+  		<type>jar</type>
+  		<optional>false</optional>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.openengsb.framework</groupId>
   		<artifactId>org.openengsb.framework.common</artifactId>
   		<version>3.0.0-SNAPSHOT</version>
+  		<type>jar</type>
+  		<optional>false</optional>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.codehaus.jackson</groupId>
+  		<artifactId>jackson-core-asl</artifactId>
+  		<version>1.9.6</version>
+  		<type>jar</type>
+  		<optional>false</optional>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.codehaus.jackson</groupId>
+  		<artifactId>jackson-mapper-asl</artifactId>
+  		<version>1.9.6</version>
   		<type>jar</type>
   		<optional>false</optional>
   	</dependency>
