--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-working.dir=C:\\temp\\sqlviewer
+working.dir=C\:\\temp\\sqlviewer
 xlink.baseUrl=failover:(tcp://localhost:6549)?timeout=6000
 openengsb.context=foo
 openengsb.connection.domainId=sqlcode
