--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 working.dir=C\:\\temp\\sqlviewer
 xlink.baseUrl=failover:(tcp://localhost:6549)?timeout=6000
+openengsb.hostIp=127.0.0.1
 openengsb.context=foo
 openengsb.connection.domainId=sqlcode
 openengsb.user=admin
