Ignore intellij files
Signed-off-by: Andreas Pieber <anpieber@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,12 @@ eclipse-workspace
 *.project
 *.classpath
 *.settings
- 
+
+#### intellij data ####
+
+*.iml
+*.idea
+
 #### netbeans data ####
 
 core/workflow/data
