--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openengsb.xlink</groupId>
   <artifactId>org.openengsb.xlink.xlinkjavaclient</artifactId>
@@ -13,21 +13,21 @@
       <resource>
         <directory>src/main/resources</directory>
       </resource>
-    </resources>    
+    </resources>
     <plugins>
-     <plugin>
-	  	<artifactId>maven-eclipse-plugin</artifactId>
-	  	<version>2.9</version>
-	  	<configuration>
-	  		<downloadSources>true</downloadSources>
-	  	</configuration>
-      </plugin>    
+    <plugin>
+      <artifactId>maven-eclipse-plugin</artifactId>
+      <version>2.9</version>
+      <configuration>
+        <downloadSources>true</downloadSources>
+      </configuration>
+      </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.5.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
@@ -50,73 +50,73 @@
               <goal>single</goal>
             </goals>
           </execution>
-        </executions>        
-      </plugin>      
+        </executions>
+      </plugin>
     </plugins>
   </build>
-  <dependencies>  	  	
-  	<dependency>
-  		<groupId>commons-collections</groupId>
-  		<artifactId>commons-collections</artifactId>
-  		<version>3.2</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.miglayout</groupId>
-  		<artifactId>miglayout</artifactId>
-  		<version>3.7.4</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.openengsb.loom.java</groupId>
-  		<artifactId>org.openengsb.loom.java</artifactId>
-  		<version>0.1.0-SNAPSHOT</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.openengsb.domain</groupId>
-  		<artifactId>org.openengsb.domain.SQLCode</artifactId>
-  		<version>3.0.0-SNAPSHOT</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.openengsb.framework</groupId>
-  		<artifactId>org.openengsb.framework.api</artifactId>
-  		<version>3.0.0-SNAPSHOT</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.openengsb.framework</groupId>
-  		<artifactId>org.openengsb.framework.util</artifactId>
-  		<version>3.0.0-SNAPSHOT</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.openengsb.framework</groupId>
-  		<artifactId>org.openengsb.framework.common</artifactId>
-  		<version>3.0.0-SNAPSHOT</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.codehaus.jackson</groupId>
-  		<artifactId>jackson-core-asl</artifactId>
-  		<version>1.9.6</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.codehaus.jackson</groupId>
-  		<artifactId>jackson-mapper-asl</artifactId>
-  		<version>1.9.6</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.miglayout</groupId>
+      <artifactId>miglayout</artifactId>
+      <version>3.7.4</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.openengsb.loom.java</groupId>
+      <artifactId>org.openengsb.loom.java</artifactId>
+      <version>1.1.0</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.openengsb.domain</groupId>
+      <artifactId>org.openengsb.domain.SQLCode</artifactId>
+      <version>3.0.0.M2</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.openengsb.framework</groupId>
+      <artifactId>org.openengsb.framework.api</artifactId>
+      <version>3.0.0.M2</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.openengsb.framework</groupId>
+      <artifactId>org.openengsb.framework.util</artifactId>
+      <version>3.0.0.M2</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.openengsb.framework</groupId>
+      <artifactId>org.openengsb.framework.common</artifactId>
+      <version>3.0.0.M2</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
+      <version>1.9.6</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.6</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
   </dependencies>
 </project>
