--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,25 @@
   <groupId>org.openengsb.xlink</groupId>
   <artifactId>org.openengsb.xlink.xlinkjavaclient</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+     <sqlcode.version>3.0.0.M2</sqlcode.version>
+  </properties>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <testSourceDirectory>src/test/java</testSourceDirectory>
     <resources>
       <resource>
-        <directory>src/main/resources</directory>
+        <directory>${project.basedir}/src/main/resources</directory>
+        <includes>
+          <include>**/*</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>${project.basedir}/src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/*.properties</include>
+        </includes>
       </resource>
     </resources>
     <plugins>
@@ -79,7 +92,7 @@
     <dependency>
       <groupId>org.openengsb.domain</groupId>
       <artifactId>org.openengsb.domain.SQLCode</artifactId>
-      <version>3.0.0.M2</version>
+      <version>${sqlcode.version}</version>
       <type>jar</type>
       <optional>false</optional>
     </dependency>
